2003-07-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (do_file): put texidoc before image.

	* input/regression/*.ly: fix snippet octaves 

	* input/test/spanner-after-break-tweak.ly: import
	broken-spanner-adjustment

	* input/no-notation/midi-transposing.ly: move from input/test/

	* input/test/: remove chord-markup

	* input/regression/instrument-name-partial.ly: move from input/test.

	* input/test/vertical-text.ly: remove

	* ly/engraver-init.ly (LyricsVoiceContext): add more vertical
	space above lyrics lines.

	* input/test/uniform-breaking.ly: remove file.

	* lily/gourlay-breaking.cc (combine_demerits): add comment about
	uniform spacing density. 

	* input/test/chords.ly (keys): remove file.

	* scm/documentation-lib.scm (oop): use srfi-1 too.

	* input/regression/*.ly: add \version

	* Documentation/user/*.itely: various fixes.

	* buildscripts/mf-to-table.py (base): break table every three
	symbols.

	* input/:  remove %% new-chords-done %% .

	* input/tutorial: remove os-flute-2.ly os-score.ly miniatures.ly
	os-music.ly
	
2003-07-03  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* make/lilypond.redhat.spec.in: require GUILE >= 1.6.4-7

	* scm/new-markup.scm (box-markup): new function.
	(box-markup): new function. Contributed by Dick Schoeller
	<schoeller@attbi.com>

	* scm/lily.scm: remove reduce-no-unit 
	(list-insert-separator): use fold-right

	* lily/molecule-scheme.cc (ly_molecule_add): take variable number
	of arguments. 

	* NEWS: more neutral language for ancient notation 

	* lily/chord-tremolo-engraver.cc (acknowledge_grob): only set
	inside pointing beaming for chord tremolo.

	* Documentation/user/lilypond-book.itely: minor editing

2003-07-03  Juergen Reuter  <reuter@ipd.uka.de>

	* NEWS: added news for 1.8 regarding ancient notation

	* Documentation/user/refman.itely (Gregorian square neumes
	ligatures): fixed typo

	* lily/vaticana-ligature-engraver.cc,
	lily/include/vaticana-ligature.hh: bugfix: use special heads for